# nanoGPT-but-looped

./: .gitignore  README.md  model.py  pyproject.toml  train.py
scripts/: run_experiments.sh  run_small_experiments.sh
src/: _profile.py  _save.py  config.py  model.py  my_conf.yaml  train.py
src/.jz/: fw_looped.slurm  fw_looped_long_decoder.slurm  fw_looped_more.slurm  fw_small.slurm  long_a100.slurm  long_v100.slurm  prepare.slurm  small_a100.slurm  small_v100.slurm  submit.md
src/data/fineweb-edu/: download.sh  prepare.py
src/data/openwebtext/: prepare.py
src/scripts/: .a100.sh  .l40_1.sh  .l40_2.sh  derisk.sh  jz.slurm  jza100.slurm  jzv100.slurm  main.sh  prepare.slurm  profile.sh  run_small_experiments.sh
